# entities-extraction-web-scraper

./: .gitignore  README.md  ai_extractor.py  main.py  pyproject.toml  results.txt  schemas.py  scrape.py  scraped_content.txt  streamlit_frontend.py
